[0, 15, 66]: 2018-09-07
  - fix issue with fold indicating characters inserted in safe_load-ed folded strings
    (reported by `Maximilian Hils <https://bitbucket.org/mhils/>`__).

[0, 15, 65]: 2018-09-07
  - fix issue #232 revert to throw ParserError for unexcpected ``]``
    and ``}`` instead of IndexError. (Issue reported and PR with fix
    provided by `Naomi Seyfer <https://bitbucket.org/sixolet/>`__.)
  - added ``key`` and ``reverse`` parameter (suggested by Jannik Klemm via email)
  - indent root level literal scalars that have directive or document end markers
    at the beginning of a line

[0, 15, 64]: 2018-08-30
  - support round-trip of tagged sequences: ``!Arg [a, {b: 1}]``
  - single entry mappings in flow sequences now written by default without quotes
    set ``yaml.brace_single_entry_mapping_in_flow_sequence=True`` to force
    getting ``[a, {b: 1}, {c: {d: 2}}]`` instead of the default ``[a, b: 1, c: {d: 2}]``
  - fix issue when roundtripping floats starting with a dot such as ``.5``
    (reported by `Harrison Gregg <https://bitbucket.org/HarrisonGregg/>`__)

[0, 15, 63]: 2018-08-29
  - small fix only necessary for Windows users that don't use wheels.

[0, 15, 62]: 2018-08-29
  - C based reader/scanner & emitter now allow setting of 1.2 as YAML version.
    ** The loading/dumping is still YAML 1.1 code**, so use the common subset of
    YAML 1.2 and 1.1 (reported by `Ge Yang <https://bitbucket.org/yangge/>`__)

[0, 15, 61]: 2018-08-23
  - support for round-tripping folded style scalars (initially requested 
    by `Johnathan Viduchinsky <https://bitbucket.org/johnathanvidu/>`__)
  - update of C code
  - speed up of scanning (~30% depending on the input)

[0, 15, 60]: 2018-08-18
  - cleanup for mypy 
  - spurious print in library (reported by 
    `Lele Gaifax <https://bitbucket.org/lele/>`__), now automatically checked 

[0, 15, 59]: 2018-08-17
  - issue with C based loader and leading zeros (reported by 