@@ -1,3 +1,8 @@
+[0, 15, 67]: 2018-09-19
+  - fix issue with extra space inserted with non-root literal strings 
+    (Issue reported and PR with fix provided by 
+    `Naomi Seyfer <https://bitbucket.org/sixolet/>`__.)
+
 [0, 15, 66]: 2018-09-07
   - fix issue with fold indicating characters inserted in safe_load-ed folded strings
     (reported by `Maximilian Hils <https://bitbucket.org/mhils/>`__).
